# lol_id_tools

./: .gitignore  ENDPOINTS_NOTES.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
.old/: lol_id_tools.py  sandbox.py
OLD/lol_id_tools/: __init__.py  local_data_parser.py  lol_id_tools.py
data/: nicknames.json
lol_id_tools/: __init__.py  bulk_loaders.py  config.py  data_parser.py  functions.py  get_simple_id.py  getter_functions.py  levensthein_utils.py  loaders.py  local_data_parser.py  logger.py  lol_id_tools.py  lol_object_data.py  nicknames.json  parsers.py  riot_data_parser.py  sqlite_classes.py  sqlite_interface.py
lol_id_tools/_tests/: test_id_getter.py  test_tools.py
lol_id_tools/caching/: data_cache.py  data_parser_local.py  locale_handler.py  lol_id_cache.py
lol_id_tools/data/: local_data.py  locales.json
lol_id_tools/local_data/: nicknames.json
lol_id_tools/parsers/: cdragon_parser.py
lol_id_tools/parsing/: __init__.py  data_parser.py  local_data_parser.py  lol_object_data.py  parse_ddragon.py
lol_id_tools/utilities/: __init__.py  delete_cache.py
tests/: conftest.py  test_get_id.py  test_get_name.py  test_get_simple_id.py  test_get_translation.py  test_id_to_name.py  test_locale.py  test_name_to_id.py  test_parallel_updates.py  test_parsers.py  test_tools.py  test_versioned_name.py
