[tool.poetry]
name = "lol_id_tools"
version = "1.8.0"
description = ""
authors = ["mrtolkien <gary.mialaret@gmail.com>"]
license = "MIT"
include = ["*.json"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
rapidfuzz = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
